--- a/index.html
+++ b/index.html
@@ -26,19 +26,7 @@
 		<div id="wrapper">
 			<h3>Welcome</h3>
 			<br>
-			<h2>My name is Zach Praiss.</h2>
-			<br>
-			<h2>I am an undergraduate student at Cornell University,
-			pursing a major in Government and minor in Architecture.</h2>
-			<br>
-			<h2>Although my primary studies have been in the field of social sciences, design
-			has always been an important part of my life so much so that I now realize it presents
-			the best path forward for me in life.</h2>
-			<br>
-			<h2>I am proud to say I am now pursuing a Masters in Architecture. Please feel free
-			to explore some of my work. All the following work is my own.</h2>
-			<br>
-			<h2>Any inquiries can be directed to <a href="mailto:zach.praiss@gmail.com">zach.praiss@gmail.com</a>.</h2>
+			<h2>I choose Millie.
 			<br>
 			<br>
 		</div>
