--- a/contact.html
+++ b/contact.html
@@ -23,24 +23,19 @@
 		</div>
 
 		<div id="wrapper">
+			<h1>Please let us know if you have any questions or comments</h1>
+
 			<br>
-			<h3>Welcome</h3>
-			<br>
-			<h2>My name is Zach Praiss.</h2>
-			<br>
-			<h2>I am an undergraduate student at Cornell University,
-			pursing a major in Government and minor in Architecture.</h2>
-			<br>
-			<h2>Although my primary studies have been in the field of social sciences, design
-			has always been an important part of my life so much so that I now realize it presents
-			the best path forward for me in life.</h2>
-			<br>
-			<h2>I am proud to say I am now pursuing a Masters in Architecture. Please feel free
-			to explore some of my work. All the following work is my own.</h2>
-			<br>
-			<h2>Any inquiries can be directed to <a href="mailto:zach.praiss@gmail.com">zach.praiss@gmail.com</a>.</h2>
-			<br>
-			<br>
+
+			<p>Home Plate is a new program starting in January of 2016, spearheaded by the Cornell University Student Assembly's City and Local Affairs Committee to help bridge the Cornell and Ithaca communities through regular dinners between small groups of Cornell students and Ithaca residents.</p>
+
+			<p>As with any new program, we know we will run into some problems along the way. We welcome any questions, comments, or concerns you might have. Please feel free to let us know how we can improve Home Plate moving forward.</p>
+
+			<p>If you have any questions, feel free to email Zach Praiss at <a href="mailto:ztp3@cornell.edu">ztp3@cornell.edu</a>.</p>
+
+			<p>Thank you for considering joining the program for its pilot round spring semester of 2016.</p>
+
+			<p class="italized">Home Plate is supported by the Office of Student and Campus Living and the Office of Off-Campus Living.</p>
 		</div>
 
 	    <div id="footer">
