Email Updates/Details

--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,13 @@
 
 			<p>As with any new program, we know we will run into some problems along the way. We welcome any questions, comments, or concerns you might have. Please feel free to let us know how we can improve Home Plate moving forward.</p>
 
-			<p>If you have any questions, feel free to email Zach Praiss at <a href="mailto:ztp3@cornell.edu">ztp3@cornell.edu</a>.</p>
+			<p>If you have any questions, feel free to email us at <a href="mailto:homeplate@cornell.edu">homeplate@cornell.edu</a>.</p>
 
 			<p>Thank you for considering joining the program for its pilot round spring semester of 2016.</p>
 
 			<p class="italized">Home Plate is supported by the Office of Student and Campus Living and the Office of Off-Campus Living.</p>
+			<br>
+			<br>
 		</div>
 
 	    <div id="footer">
