--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 
 			<p>Established by the Cornell University Student Assembly's City and Local Affairs Committee and starting in January of 2016, Home Plate is a program that strives to bridge the Cornell and Ithaca communities through regular dinners between small groups of Cornell students and Ithaca residents.</p>
 
-			<p>Home Plate is inspired by a similar program at Washington University in St. Louis.  Students at Washington University greatly appreciate the opportunity to leave campus, enjoy a home cooked meal, and embrace a new family as almost their own in the surrounding community.  Participating families in the program love to have engaging and delightful young students in their house for an informal dinner. We believe it's a win-win for everyone and a phenomenal way to better relations between the City of Ithaca and Cornell University.</p>
+			<p>Home Plate is inspired by a similar program at Washington University in St. Louis.  Students at Washington University greatly appreciate the opportunity to leave campus, enjoy a home cooked meal, and embrace a new family as almost their own in the surrounding community.  Participating families in the program love to have engaging and delightful young students in their house for an informal dinner. We believe it's a win-win for everyone and a phenomenal way to bridge the Cornell and Ithaca communities.</p>
 
 			<p>Thank you for considering joining the program for its pilot round spring semester of 2016. We are hoping to test out the program with about 10 families and 30 students.</p>
 
-			<p>If you have any questions, feel free to email Zach Praiss at <a href="mailto:ztp3@cornell.edu">ztp3@cornell.edu</a>.</p>
+			<p>If you have any questions, feel free to email us at <a href="mailto:homeplate@cornell.edu">homeplate@cornell.edu</a>.</p>
 
 			<p class="italized">Home Plate is supported by the Office of Student and Campus Living and the Office of Off-Campus Living.</p>
+			<br>
+			<br>
 		</div>
 
 	    <div id="footer">
